--- a/src/components/product/views/detail.hbs
+++ b/src/components/product/views/detail.hbs
@@ -26,9 +26,7 @@
 							<li><div><span>Bảo hành</span> : 12 tháng</div></li>
 							<li><div><span>Tình trạng</span> : Mới 100%</div></li>
 						</ul>
-						<div class="list1">Khuyến mãi:
-						  <div>Giảm giá chỉ còn 21,490,000</div>
-						 </div>
+						<div class="list1">Số lượng còn lại: {{product.stock}}</div>
 						<div class="list1">Ưu đãi đặc biệt khi mua kèm LAPTOP:
 						  {{#each product.offer}}
 						  <div>{{this.content}}</div>
@@ -36,12 +34,13 @@
 						</div>
 						<div class="product_count">
               <label for="qty">Số lượng:</label>
-              <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
-							 class="increase items-count" type="button"><i class="ti-angle-left"></i></button>
+<!--              <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"-->
+<!--							 class="increase items-count" type="button"><i class="ti-angle-left"></i></button>-->
 							<input type="number" name="qty" id="sst" size="2" maxlength="12" value="1" title="Quantity:" class="input-text qty">
-							<button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
-               class="reduced items-count" type="button"><i class="ti-angle-right"></i></button>
-							<a class="button primary-btn" href="#">Thêm vào giỏ hàng</a>
+<!--							<button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"-->
+<!--               class="reduced items-count" type="button"><i class="ti-angle-right"></i></button>-->
+							<div><a class="btn btn-danger" href="/products/unrepeatable-read-error-type-1-trans-2">Unrepeatable Read Error</a></div>
+                            <div><a class="btn btn-success" href="/products/fix-unrepeatable-read-type-1-trans-2">Fix Unrepeatable Read</a></div>
 						</div>
 						<div class="card_area d-flex align-items-center">
 							<a class="icon_btn" href="#"><i class="lnr lnr lnr-diamond"></i></a>
