--- a/src/components/order/views/order.hbs
+++ b/src/components/order/views/order.hbs
@@ -73,7 +73,7 @@
         <div id="lost-update-mess" hidden>{{lost_update_message}}</div>
     {{/if}}
     {{#if deadlock_message}}
-        <div id="deadlock-message">{{deadlock_message}}</div>
+        <div id="deadlock-message" hidden>{{deadlock_message}}</div>
     {{/if}}
 </div>
 <!-- /.content-wrapper -->
